# Gaffney-Orthotics-Capstone-Project

./: .gitignore  CMakeLists.txt  README.md  build.bat  cottage.stl
backend/: backend.js
backend/src/core/: ArrowString.h  CylinderString.h  Entity.cpp  Entity.h  MeshEditor.cpp  MeshEditor.h  StairsString.h  main.cpp
backend/src/data/shaders/: static_vs.glsl
backend/src/engine/: maths.h  render.cpp  render.h  shader.h  shaders.cpp  shaders.h  texture.h
frontend/: wrapper.js
frontend/app/: .gitignore  package-lock.json  package.json
frontend/app/public/: backend.js  help.html  index.html  style.css
frontend/app/src/: App.css  App.js  App.test.js  index.js
frontend/app/src/__tests__/: App.test.js  Camera.test.js  Coords.test.js  EditMenu.test.js  ExportFile.test.js  ImportFile.test.js  NavBar.test.js  SelectMenu.test.js  ToolGroup.test.js  Toolbar.test.js  ViewMenu.test.js  index.test.js
frontend/app/src/components/: Camera.js  Coords.js  EditMenu.js  ExportFile.js  ImportFile.js  ImportFile.test.js  ImportSTL.js  NavBar.js  Rotate.js  SelectMenu.js  ToolGroup.js  Toolbar.js  Translate.js  ViewMenu.js
include/glad/: glad.h
lib/assimp/: CMakeCache.txt  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/assimp/code/: Makefile  cmake_install.cmake
lib/assimp/contrib/: Makefile  cmake_install.cmake
lib/assimp/contrib/irrXML/: Makefile  cmake_install.cmake
lib/assimp/contrib/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/assimp/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/assimp/test/headercheck/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/assimp/test/models/glTF2/BoxTextured-glTF/: BoxTextured_out.gltf
lib/assimp/tools/assimp_cmd/: Makefile  cmake_install.cmake
src/: make.bat  make_click.bat
src/backend/core/: MeshEditor.cpp  MeshEditor.h  main.cpp
src/backend/data/shaders/: static_fs.glsl
src/backend/engine/: defines.h  render.cpp  render.h  shaders.cpp  shaders.h
src/core/: main.cpp
src/engine/: SOIL.lib  defines.h  maths.h  render.h  shader.h  shaders.cpp  shaders.h  texture.h
src/frontend/: debug_elements.js  main.html  style.css  wrapper.js
src/frontend/app/: package-lock.json
src/frontend/app/public/: style.css
src/frontend/app/src/: App.js  index.js
src/frontend/app/src/components/: ImportSTL.js
(+1 files in other folders)
